[workspace]
resolver = "3"
members = [
    "serseg",
    "ti-asset-builder",
]

[workspace.package]
authors = [ "ThePinkHacker" ]
license = "GPL-3.0-or-later"
repository = "https://github.thepinkhacker.com/tice-rust"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
anyhow = "1.0.100"
ascii = "1.1.0"
clap = "4.5.53"
env_logger = "0.11.8"
indexmap = "2.12.1"
log = "0.4.28"
serde = "1.0.228"
serde_test = "1.0.177"
serseg = { version = "0.1.0", path = "./serseg" }
tokio = "1.48.0"
toml = "0.9.8"
u24 = "0.5.0"
