[package]
name = "serseg"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
u24.workspace = true

[lints]
workspace = true
