[package]
name = "ti-asset-builder"
version = "0.1.0"
description = "A tool to package sprites and fonts for TI-84 Plus CE graphing calculators"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ascii = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_test.workspace = true
