[package]
name = "ti-asset-builder"
version = "0.1.0"
description = "A tool to package sprites and fonts for TI-84 Plus CE graphing calculators"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ascii = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
image = { version = "0.25.9", default-features = false, features = ["png"] }
log = { workspace = true, features = ["max_level_trace", "release_max_level_warn"] }
serde = { workspace = true, features = ["derive"] }
serseg.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
toml.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_test.workspace = true
